# v2i-calib

./: .gitignore  .gitmodules  README.md  TaskExecutor.py  analysis_results.csv  analysis_results_.csv  batchtest.py  config.yml  low_combine_accuracy_scenes_list.json  requirements.txt  setup.sh  table.txt  test.py
Log/: analyze.py
PSO/: PSO.py
benchmark/: hkust_lidar_global_registration_benchmark.py  initial_value_method_batchtest.py  initial_value_method_test.py  ransac.py  test.py
benchmarks/: hkust_lidar_global_registration_benchmark.py  run_cbm_benchmark.py  run_dair_lidar_benchmark.py  run_vips_benchmark.py
calib/: config.py
config/: config.py  config.yaml  hkust_lidar_global_config.yaml
configs/: hkust_lidar_global_config.yaml  hkust_lidar_global_config_fgr.yaml  hkust_lidar_global_config_full.yaml  hkust_lidar_global_config_quatro.yaml  hkust_v2xset_config.yaml  legacy_api.py  pipeline.yaml  pipeline_descriptor.yaml  pipeline_detection.yaml  pipeline_detection_balanced.yaml  pipeline_detection_pp.yaml  pipeline_detection_sc.yaml  pipeline_detection_size.yaml  pipeline_detection_subset.yaml  pipeline_features.yaml  pipeline_hkust.yaml  pipeline_hkust_balanced.yaml  pipeline_hkust_oiou.yaml  pipeline_hkust_parallel.yaml  pipeline_hkust_parallel_pool.yaml  pipeline_hkust_singlematch.yaml  pipeline_hkust_temporal.yaml  pipeline_hkust_temporal6.yaml  pipeline_hkust_vertexshuffle.yaml  pipeline_hkust_vertexshuffle_both.yaml  pipeline_paper3737.yaml  pipeline_top3000.yaml
process/: main.py  (+9 more)
validate/speed_test/: BoxesMatch.cpp  CMakeLists.txt  hungarian.cpp
(+217 files in other folders)
